--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Charity Water Game</title>
+  <title>charity: water — Fill the Well</title>
+
+  <!-- Brand-adjacent font -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles.css"/>
+  <meta name="theme-color" content="#FFC907">
 </head>
 <body>
   <header class="app-header">
-    <div class="brand">
-      <span class="jerry"></span>
+    <div class="brand" aria-label="charity: water">
+      <span class="jerry" aria-hidden="true"></span>
       <span class="brand-text">charity: water</span>
     </div>
-    <button id="resetBtn" class="btn btn-ghost" aria-label="Reset game">Reset</button>
+
+    <div class="header-actions">
+      <button id="soundBtn" class="btn btn-ghost" aria-pressed="true" aria-label="Sound on">🔊 Sound</button>
+      <button id="resetBtn" class="btn btn-ghost" aria-label="Reset game">Reset</button>
+    </div>
   </header>
 
   <main class="app">
-    <!-- keep original heading (from your starter) but style it small -->
     <h1 class="sr-title">Welcome to the Charity Water Game Prototype</h1>
 
     <!-- START SCREEN -->
@@ -30,13 +39,13 @@
     <!-- QUIZ SCREEN -->
     <section id="quizScreen" class="card quiz hidden" aria-live="polite">
       <div class="hud">
-        <div class="meter">
+        <div class="meter" aria-label="Well fill meter">
           <div id="meterFill" class="meter-fill"></div>
           <span id="meterPct" class="meter-label">0%</span>
         </div>
         <div class="hud-right">
-          <span id="streak" class="badge">🔥 x0</span>
-          <span id="timer" class="badge">⏱ 15</span>
+          <span id="streak" class="badge" aria-label="Streak">🔥 x0</span>
+          <span id="timer" class="badge" aria-label="Timer">⏱ 15</span>
         </div>
       </div>
 
@@ -46,9 +55,7 @@
 
       <h3 id="question" class="question">Loading…</h3>
 
-      <div id="answers" class="answers" role="group" aria-label="Answer choices">
-        <!-- buttons injected here -->
-      </div>
+      <div id="answers" class="answers" role="group" aria-label="Answer choices"></div>
 
       <div class="actions">
         <button id="nextBtn" class="btn btn-secondary" disabled>Next</button>
@@ -70,18 +77,18 @@
         </div>
       </div>
       <div class="result-right">
-        <div class="result-badge">
-          <span class="jerry big"></span>
+        <div class="result-badge" aria-label="Well percent">
+          <span class="jerry big" aria-hidden="true"></span>
           <p id="wellPctBig" class="well-pct">0%</p>
         </div>
       </div>
     </section>
   </main>
 
-  <!-- obstacle container + confetti -->
-  <div id="obstacleLayer" class="obstacle-layer"></div>
-  <div id="confettiLayer" class="confetti-layer"></div>
+  <div id="obstacleLayer" class="obstacle-layer" aria-hidden="true"></div>
+  <div id="confettiLayer" class="confetti-layer" aria-hidden="true"></div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
